[project]
name = "streamlit-mh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "google-genai>=2.10.0",
    "gtts>=2.5.4",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "streamlit>=1.59.0",
    "streamlit-autorefresh>=1.0.1",
    "streamlit-folium>=0.27.2",
    "streamlit-js-eval>=1.0.0",
    "streamlit-mic-recorder>=0.0.8",
]
